hydroflow_plus_test/src/local/snapshots/hydroflow_plus_test__local__negation__tests__difference_tick_static@graphvis_dot.snap
---
source: hydroflow_plus_test/src/local/negation.rs
expression: "flow.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter({\l    use crate::__staged::local::negation::*;\l    0..5\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) source_iter({\l    use crate::__staged::local::negation::*;\l    3..6\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) difference_multiset::<'tick, 'static>()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) for_each({\l    use crate::__staged::local::negation::*;\l    let output = output;\l    |v| {\l        output.send(v).unwrap();\l    }\l})\l", shape=house, fillcolor="#ffff88"]
    n5v1 [label="(n5v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n3v1 [label="pos"]
    n2v1 -> n5v1
    n3v1 -> n4v1
    n5v1 -> n3v1 [label="neg", color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n2v1
        subgraph "cluster_sg_1v1_var_stream_1" {
            label="var stream_1"
            n2v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n1v1
        n3v1
        n4v1
        subgraph "cluster_sg_2v1_var_stream_0" {
            label="var stream_0"
            n1v1
        }
        subgraph "cluster_sg_2v1_var_stream_2" {
            label="var stream_2"
            n3v1
        }
    }
}
